# mesonet-qc

./: README.md  README.qmd  pyproject.toml
pyqc/: bits.py  checks.py  columns.py  process.py
test/: conftest.py  elements.csv  observations.csv  test_checks.py  test_process.py
