[tool.poetry]
name = "pyqc"
version = "0.1.0"
description = "Automated QA/QC checking for weather stations."
authors = ["colinbrust <colin.brust@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pyqc" }
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
geopandas = "^0.12.1"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipykernel = "^6.17.1"
flake8 = "^6.0.0"
isort = "^5.10.1"
ruff = "^0.0.236"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "I001"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

fix = true
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]