[project]
name = "pyqc"
version = "0.1.0"
description = "Automated QA/QC checking for weather stations."
authors = [{ name = "colinbrust", email = "colin.brust@gmail.com" }]
requires-python = ">=3.10,~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "pandas>2.0.0",
    "geopandas>=0.12.1",
    "numpy >1.25.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.17.1,<7",
    "pytest>=7.0.0,<8",
]

[tool.hatch.build.targets.sdist]
include = ["pyqc"]

[tool.hatch.build.targets.wheel]
include = ["pyqc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "I001"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

fix = true
unfixable = ["F401"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["."]